Sinau Koding Batch22

--- a/HTML/tugas/tugas1.html
+++ b/HTML/tugas/tugas1.html
@@ -42,10 +42,20 @@
                 <td><input type="password"></td>
             </tr>
             <tr>
-                <td colspan="2" style="text-align:center;"> Radio 1<input type="radio"> Radio 2<input type="radio"></td>
+                <td colspan="2" style="text-align:center;">
+                    <label for="Radio1">Radio1</label>
+                    <input type="radio" id="html" name="fav_language" value="Radio1">
+                    <label for="Radio2">Radio2</label>
+                    <input type="radio" id="html" name="fav_language" value="Radio2">
+                </td>
             </tr>
             <tr>
-                <td colspan="2" style="text-align:center;">CheckBox 1<input type="checkbox"> CheckBox 2<input type="checkbox"></td>
+                <td colspan="2" style="text-align:center;">
+                    <label for="Checkbox1">Checkbox1</label>
+                    <input type="checkbox">
+                    <label for="Checkbox2">Checkbox2</label>
+                    <input type="checkbox">
+                </td>
             </tr>
             <tr>
                 <td style="text-align:right;">ComboBox : </td>
